force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/Apttus_DocuApi__DocuSignSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DocuSign System properties</description>
    <label>DocuSign System Properties</label>
</CustomObject>