force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__AddAttachmentsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__AddAttachmentsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add Attachments Enabled</description>
    <inlineHelpText>Add Attachments Enabled</inlineHelpText>
    <label>Add Attachments Enabled</label>
    <type>Checkbox</type>
</CustomField>