force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__AddRecipientsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__AddRecipientsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add Recipients Enabled</description>
    <inlineHelpText>Add Recipients Enabled</inlineHelpText>
    <label>Add Recipients Enabled</label>
    <type>Checkbox</type>
</CustomField>