force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__CompletedEnvelopeSyncInterval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__CompletedEnvelopeSyncInterval__c</fullName>
    <defaultValue>&quot;30&quot;</defaultValue>
    <description>System settings to refresh data from DocuSign about the Completed Envelope Sync Interval for the Scheduled job in minutes on each hour (Comma separated values)</description>
    <inlineHelpText>System settings to refresh data from DocuSign about the Completed Envelope Sync Interval for the Scheduled job in minutes on each hour (Comma separated values) - (DEPRECATED)</inlineHelpText>
    <label>CompletedEnvSyncInterval (DEPRECATED)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>