force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__DocuSignBatchProcessingDisabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignBatchProcessingDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates whether to use Apex batch to process DocuSign eSignature request. If set to true the request would be processed synchronously.</description>
    <inlineHelpText>This flag indicates whether to use Apex batch to process DocuSign eSignature request. If set to true the request would be processed synchronously.</inlineHelpText>
    <label>DocuSign Batch Processing Disabled</label>
    <type>Checkbox</type>
</CustomField>