force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__DocuSignEnvelopeStatusSubscriber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignEnvelopeStatusSubscriber__c</fullName>
    <description>Holds class names to be called by Envelope status sync batch job update extension objects</description>
    <inlineHelpText>Holds class names to be called by Envelope status sync batch job update extension objects</inlineHelpText>
    <label>DocuSign envelop status subscriber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>