force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__DocuSignServer__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignServer__c</fullName>
    <defaultValue>&quot;PROD&quot;</defaultValue>
    <description>DocuSign Server environment to connect : valid entries (DEMO, PROD,NA1,NA2,EU1)</description>
    <inlineHelpText>DocuSign Server environment to connect : valid entries (DEMO, PROD,NA1,NA2,EU1)</inlineHelpText>
    <label>Production Server Pod</label>
    <length>80</length>
    <type>Text</type>
</CustomField>