force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__DocuSignTemplatesEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignTemplatesEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will provide a DocuSign template selection list on the user interface, under the additional details section. When it is checked, recipient role selection will not be available on the user interface.</description>
    <inlineHelpText>If checked, it will provide a DocuSign template selection list on the user interface, under the additional details section. When it is checked, recipient role selection will not be available on the user interface.</inlineHelpText>
    <label>DocuSign Templates Enabled</label>
    <type>Checkbox</type>
</CustomField>