force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__DocusignWebhookEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignWebhookEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the DocuSign webhook is enabled to refresh the envelope status automatically.</description>
    <inlineHelpText>Indicates whether the DocuSign webhook is enabled to refresh the envelope status automatically.</inlineHelpText>
    <label>Docusign Webhook Enabled</label>
    <type>Checkbox</type>
</CustomField>