force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__EditEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EditEmailEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting controls whether users can edit the email subject and body on the user interface, under the additional details section.</description>
    <inlineHelpText>This setting controls whether users can edit the email subject and body on the user interface, under the additional details section. If it is checked, users will be able to edit the email subject and the email body.</inlineHelpText>
    <label>Edit Email Enabled</label>
    <type>Checkbox</type>
</CustomField>