force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__EmailBody__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EmailBody__c</fullName>
    <defaultValue>&quot;Request for eSignatures. Please review and sign.&quot;</defaultValue>
    <description>No longer used.</description>
    <inlineHelpText>No longer used.</inlineHelpText>
    <label>Email Body (DEPRECATED)</label>
    <type>TextArea</type>
</CustomField>