force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EmailSubject__c</fullName>
    <defaultValue>&quot;Request for eSignatures&quot;</defaultValue>
    <description>No longer used.</description>
    <inlineHelpText>No longer used.</inlineHelpText>
    <label>Email Subject (DEPRECATED)</label>
    <type>TextArea</type>
</CustomField>