force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__HttpTimeout__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__HttpTimeout__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>Timeout for HTTP callouts</description>
    <inlineHelpText>Timeout for HTTP callouts - The minimum is 1 millisecond and the maximum is 120,000 milliseconds.</inlineHelpText>
    <label>Http Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>