force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__IncludeCertificate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__IncludeCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include DocuSign&apos;s certificate of completion with the signed document.</description>
    <inlineHelpText>Include DocuSign&apos;s certificate of completion with the signed document.</inlineHelpText>
    <label>Include Certificate</label>
    <type>Checkbox</type>
</CustomField>