force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__MaxNumberOfSignerRole__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__MaxNumberOfSignerRole__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Max Number Of Signer Role listed in the list box for users to select signer roles</description>
    <inlineHelpText>Max Number Of Signer Role listed in the list box for users to select signer roles - (DEPRECATED)</inlineHelpText>
    <label>MaxNumberOfSignerRole (DEPRECATED)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>