force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__ProductionEnvironment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ProductionEnvironment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will connect to DocuSign Production environment.
Also add “Production Server Pod:” to any one of the value “{DEMO, PROD,NA1,NA2,EU1,WWWSTAGE1}”
Unchecked will be connected to Demo Server.</description>
    <inlineHelpText>This will connect to DocuSign Production environment.
Also add “Production Server Pod:” to any one of the value “{DEMO, PROD,NA1,NA2,EU1,WWWSTAGE1}”
Unchecked will be connected to Demo Server.</inlineHelpText>
    <label>Production Environment?</label>
    <type>Checkbox</type>
</CustomField>