force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__ProfilesEnabledForFinalizeInDocuSign3__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ProfilesEnabledForFinalizeInDocuSign3__c</fullName>
    <description>Comma separated names for the user profiles that need to see the Finalize In DocuSign button on the user interface. This custom setting is used in combination with the ViewInDocuSignEnabled custom setting. If this setting is blank, and the ViewInDocuSignEnabled custom setting is checked, all the profiles will see the Finalize in DocuSign button. Use this to enable the finalize button only for specific profiles.</description>
    <inlineHelpText>Comma separated names for the user profiles that need to see the Finalize In DocuSign button on the user interface. This custom setting is used in combination with the ViewInDocuSignEnabled custom setting.</inlineHelpText>
    <label>Profiles Enabled For Finalize 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>