force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__ProfilesEnabledForTemplateSelection__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ProfilesEnabledForTemplateSelection__c</fullName>
    <description>Comma separated names for the user profiles that need the ability to select DocuSign template on the user interface. This custom setting is used in combination with the DocuSignTemplatesEnabled custom setting. If this setting is blank, and the DocuSignTemplatesEnabled custom setting is checked, all the profiles will see the template selection list box.</description>
    <inlineHelpText>Use this to enable the DocuSign template selection only for specific profiles.</inlineHelpText>
    <label>Profiles Enabled For Template Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>