force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__RecipientRolesEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RecipientRolesEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This settings enables the users to select the recipient role name while adding a recipient and makes the tagging order explicit. When enabled, users will see an additional option list to select the role name for the recipient on the add recipient view.</description>
    <inlineHelpText>This settings enables the users to select the recipient role name while adding a recipient and makes the tagging order explicit. When enabled, users will see an additional option list to select the role name for the recipient on the add recipient view.</inlineHelpText>
    <label>Recipient Roles Enabled</label>
    <type>Checkbox</type>
</CustomField>