force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__RemoveRecipientOrdering__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RemoveRecipientOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting controls the visibility of the move up/down arrows on the add recipient user interface. If checked, the move up/down arrows will be hidden.</description>
    <inlineHelpText>This setting controls the visibility of the move up/down arrows on the add recipient user interface. If checked, the move up/down arrows will be hidden.</inlineHelpText>
    <label>Remove Recipient Ordering</label>
    <type>Checkbox</type>
</CustomField>