force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__RetrieveAsCombinedDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RetrieveAsCombinedDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This retrieves a PDF containing the combined content of all documents after signing. It is defaulted to download as separate documents.</description>
    <inlineHelpText>This retrieves a PDF containing the combined content of all documents after signing. It is defaulted to download as separate documents.</inlineHelpText>
    <label>RetrieveAsCombinedDocument</label>
    <type>Checkbox</type>
</CustomField>