force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__SelectFirstDocumentDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SelectFirstDocumentDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select first document default to send for eSignature</description>
    <inlineHelpText>Select first document default to send for eSignature</inlineHelpText>
    <label>Select First Document Default</label>
    <type>Checkbox</type>
</CustomField>