force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__SendForSignatureEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SendForSignatureEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send For Signature Enabled</description>
    <inlineHelpText>Send For Signature Enabled</inlineHelpText>
    <label>Send For Signature Enabled</label>
    <type>Checkbox</type>
</CustomField>