force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__SortDocumentDescending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SortDocumentDescending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sort documents by updated data descending order</description>
    <inlineHelpText>Sort documents by updated data descending order</inlineHelpText>
    <label>Sort Document Descending</label>
    <type>Checkbox</type>
</CustomField>