force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__SyncApttusCreatedEnvelopesOnly__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SyncApttusCreatedEnvelopesOnly__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting controls the behavior of the envelope status sync scheduled batch job. If checked, it only looks for envelope status changes for the Apttus created envelopes</description>
    <inlineHelpText>This setting controls the behavior of the envelope status sync scheduled batch job. If checked, it only looks for envelope status changes for the Apttus created envelopes</inlineHelpText>
    <label>Sync Apttus Created Envelopes Only</label>
    <type>Checkbox</type>
</CustomField>