force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__VersionSupportSubscriber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__VersionSupportSubscriber__c</fullName>
    <inlineHelpText>Version support subscriber class name.</inlineHelpText>
    <label>Version Support Subscriber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>