force-app/main/default/objects/Apttus_DocuApi__DocuSignSystemProperties__c/fields/Apttus_DocuApi__ViewInDocuSignEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ViewInDocuSignEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>View In DocuSign Enabled</description>
    <inlineHelpText>View In DocuSign Enabled</inlineHelpText>
    <label>View In DocuSign Enabled</label>
    <type>Checkbox</type>
</CustomField>